# g-adopt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rules.mk  .tasks.lib.yml  CHANGE-2026-05-22.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  dodo.py  dodo_typing.py  get_software_citation.py  pyproject.toml  pytest.ini  reinit_levelset.md  requirements-git.txt  requirements.txt  rules.mk  setup.cfg  taskfile.yml  vauclin.py
.github/workflows/: lint.yml  longtest.yml  memprof_plot.yml  render.yml  systems.txt  test.yml
.testing/: jupyter-nbconvert  jupytext
Davies_etal_GMD_2021/: Makefile  generate_expected_output.py  test_all.py
Davies_etal_GMD_2021/2D_cartesian/: Makefile
Davies_etal_GMD_2021/2D_cylindrical/: 2d_cylindrical.py  Makefile  expected.pkl  manual_diff_2d_cylinder_base.py
Davies_etal_GMD_2021/3D_cartesian/: 3d_cartesian.py  Makefile  expected.pkl  manual_diff_3d_cartesian_base.py
Davies_etal_GMD_2021/3D_spherical/: 3d_spherical.py  Makefile  expected.pkl  manual_diff_3d_spherical_2d_cylindrical.py
Davies_etal_GMD_2021/Drucker-Prager_rheology/: plot_convergence.py  spiegelman.py
Davies_etal_GMD_2021/global_gplates/: global_gplates.py  libgplates.py
Davies_etal_GMD_2021/parallel_scaling/: plot_scaling_diagnostics.py
benchmarks/: blankenbach_1e4.py  busse_C1.py
cylindrical_adjoint/00_fwd_reference/: fwd_blob_freeslip.py
cylindrical_adjoint/02_adjoint/: 00_adjoint_blob_fs_ROL.py  01_adjoint_blob_fs_MOOLA.py  adjoint_blob_imposed_surface.py
cylindrical_adjoint/mesh/: shell_v2_cylindrical.geo
demos/: .diagram.mermaid  .pages  .rules.mk  Makefile  base_case.py  generate_expected.py  makefile.cases.inc  makefile.demos.inc  taskfile.yml  test_all.py
demos/2D_cylindrical/: 2d_cylindrical.py
demos/2d_compressible/: Makefile  compressible_case.py  expected.pkl
demos/2d_compressible_ALA/: 2d_compressible_ALA.py  ALA_p_nullspace.py  Makefile  compressible_case_ALA.py  expected.pkl  visualise_ALA_p_nullspace.py
demos/2d_compressible_TALA/: 2d_compressible_TALA.py  Makefile  compressible_case_TALA.py  expected.pkl
demos/2d_cylindrical/: 2d_cylindrical.py  2d_cylindrical_dpc2.py  Makefile  expected.pkl
demos/2d_cylindrical_TALA_DG/: 2d_cylindrical_TALA_DG.py  Makefile
demos/3d_cartesian/: 3d_cartesian.py  Makefile  expected.pkl
demos/3d_spherical/: 3d_spherical.py  Makefile  expected.pkl
demos/Drucker-Prager_rheology/: Makefile  spiegelman.py  test_spiegelman.py
demos/PDE_constrained_optimisation/: .gitignore  Makefile  PDE_constrained_boundary.py  PDE_constrained_field.py  meta.py  taskfile.yml  test_pde_constrained_optimisation.py
demos/adapt/: base_case.py
demos/adjoint/: Makefile  adjoint.py  adjoint_demo.py  adjoint_forward.py  forward.py  inverse.py  taylor_test.py  test_adjoint.py  test_adjoint_demo.py
demos/adjoint_2d_cylindrical/: Checkpoint230.h5  Makefile  forward.py  inverse.py  taylor_test.py  test_cylindrical_adjoint.py
demos/adjoint_gplates_test/: forward.py  taylor_test.py
demos/adjoint_spherical/: .gitattributes  3d_spherical_GPlates.py  adjoint.py  adjoint_small.py  compare.py  drive.py  job.sh  load_reload.py  load_sph.py  new_adjoint.py  reference_fields.h5  reproducer_delta.py  reproducer_solve.py  (+1 more)
docs/: testing.md
full_cylindrical_adjoint/: fwd_production.py
gadopt/: __init__.py  approximations.py  diagnostics.py  doc_descriptions.txt  energy_solver.py  equations.py  free_surface_equation.py  gia_demo_utilities.py  gplatefiles.py  gplates.py  inverse.py  level_set_solver.py  level_set_tools.py  limiter.py  lsq_limiter.c  mg_transfers.py  momentum_equation.py  nullspaces.py  preconditioners.py  richards_equation.py  richards_solver.py  scalar_equation.py  soil_curves.py  solver_options_manager.py  stokes_integrators.py  time_stepper.py  transfers.py  transport_solver.py  utility.py  viscoelastic_equation.py
periodic_box_adjoint/: adj_taylorT.py  fwd_production.py
spherical_benchmark_2_1/: .stokes.py.swp  output.txt  stokes.py  stokes_fs.py
spherical_benchmark_2_1_ns/: stokes_ns.py
test/: test_continuity.py
tests/: Makefile  taskfile.yml  test_extrusion_tools.py  test_gplates.pkl  test_gplates.py  test_limiters.py  test_one_d_assigner.py  test_smoothing.py  test_stokes_solver_configuration.py
tosi_benchmarks/: tosi-yield.py
(+897 files in other folders)
