[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "gadopt"
authors = [
  { name = "G-ADOPT Contributors" }
]
description = "A computational platform for inverse geodynamics"
dynamic = ["version"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "firedrake~=2026.4.0",
  "doit",
  "pandas",
  "shapely",
  "vtk",
  "IRKsome-gadopt~=2026.4.0",
  #"irksome @ git+https://github.com/firedrakeproject/Irksome@fdae281",
]

[external]
dependencies = [
  "dep:github/firedrakeproject/Irksome",
]

[project.optional-dependencies]
demos = [
  "assess",
  "gadopt-demo-utils",
  "gmsh",
  "imageio",
  "jupytext",
  "openpyxl",
  "pyvista",
]
optimisation = ["pyroltrilinos"]

[tool.setuptools]
packages = ["gadopt", "gadopt.gplates", "gadopt.demos"]
package-dir = { "gadopt.demos" = "demos" }

[tool.setuptools_scm]
scm.git.describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--abbrev=40", "--match", "*[0-9]*", "--exclude", "Zenodo*"]
