[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "gadopt"
authors = [
  { name = "G-ADOPT Contributors" }
]
description = "A computational platform for inverse geodynamics"
dynamic = ["version"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "doit",
  "pandas",
  "shapely",
  "vtk",
  # Pin to upstream commit 4820795 ("Conservative StageValueStepper (#204)")
  # which lands the conservative-update fix for non-stiffly-accurate
  # stage_value that gadopt.RichardsSolver depends on. Once
  # firedrake-vanilla-default and the fp50 Gadi module both ship an
  # Irksome at or after this commit, drop the pin.
  "irksome @ git+https://github.com/firedrakeproject/Irksome.git@4820795",
]

[project.optional-dependencies]
demos = ["assess", "gadopt-demo-utils @ git+https://github.com/g-adopt/gadopt-demo-utils.git", "gmsh", "imageio", "jupytext", "openpyxl", "pyvista"]
optimisation = ["pyroltrilinos"]

[tool.setuptools]
packages = ["gadopt", "gadopt.gplates", "gadopt.demos"]
package-dir = { "gadopt.demos" = "demos" }

[tool.setuptools_scm]
scm.git.describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--abbrev=40", "--match", "*[0-9]*", "--exclude", "Zenodo*"]
