[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "gadopt"
authors = [
  { name = "G-ADOPT Contributors" }
]
description = "A computational platform for inverse geodynamics"
dynamic = ["version"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "doit",
  "pandas",
  "shapely",
  "vtk",
  # Track Irksome PR #226 ("Mass-conservative update for non-stiffly-accurate
  # stage_value") on the author's fork branch. PR #204 fixed the per-stage
  # two-evaluation form; PR #226 is the follow-up that fixes the stage->u_new
  # update step, which is what gadopt.RichardsSolver relies on for
  # ImplicitMidpoint / GaussLegendre(2) to conserve mass. Once PR #226 is
  # merged upstream and firedrake-vanilla-default (plus the fp50 Gadi module)
  # ship an Irksome including it, drop the pin.
  "irksome @ git+https://github.com/sghelichkhani/Irksome.git@sghelichkhani/conservative-update-non-sa",
]

[project.optional-dependencies]
demos = ["assess", "gadopt-demo-utils @ git+https://github.com/g-adopt/gadopt-demo-utils.git", "gmsh", "gwassess>=1.0.0", "imageio", "jupytext", "openpyxl", "pyvista"]
optimisation = ["pyroltrilinos"]

[tool.setuptools]
packages = ["gadopt", "gadopt.gplates", "gadopt.demos"]
package-dir = { "gadopt.demos" = "demos" }

[tool.setuptools_scm]
scm.git.describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--abbrev=40", "--match", "*[0-9]*", "--exclude", "Zenodo*"]
